String.trim().isEmpty() -> String.isBlank()